Начинаем верстку с препроцессором

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,23 @@
-body { background: red; }
+@import "body.less";
+@import "button.less";
+@import "catalog.less";
+@import "variable.less";
+@import "header.less";
+@import "visually-hidden.less";
+@import "burger.less";
+@import "site-list.less";
+@import "program-choice.less";
+@import "introduce.less";
+@import "works.less";
+@import "example.less";
+@import "welcome.less";
+@import "smm-list.less";
+@import "htmlacademy.less";
+@import "add-article.less";
+@import "main.less";
+@import "catalog-description.less";
+@import "more-info.less";
+@import "add-goods.less";
+@import "present.less";
+@import "program.less";
+@import "program-form.less";
