Работа над ошибками

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -10,15 +10,8 @@
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  color: @white;
-  background-color: @leaf;
+  color: @color-back--main;
+  background-color: @color-button;
   padding-top: 10px;
 }
 
-.button-show {
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 20px;
-  color: @greylish-brown;
-  text-align: center;
-}
