--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,7 +1,7 @@
 
 .html-academy {
-  font-family: @arial;
-  color: @greylish-brown;
+  font-family: @font-family--arial;
+  color:@color-font--arial;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
