--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,14 +1,14 @@
 .present {
   width: 280px;
   height: 289px;
-  background-color: @leaf;
+  background-color: @color-button;
   background-image: url(../img/gift-photo-mobile@1x.jpg);
+  text-align: center;
 }
 
 .present__text {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
-  color: @white;
+  color: @color-back--main;
 }
