--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -1,7 +1,6 @@
 
 .program-choice {
-  background-color: @grey;
-
+  background-color: @color-back--text;
 }
 
 .program-choice__get {
@@ -18,7 +17,7 @@
 }
 
 .program-choice__item-head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-size: 24px;
   font-weight: normal;
   line-height: 37px;
