--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -1,5 +1,5 @@
 .program-form__head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: normal;
   font-size: 24px;
   text-align: left;
@@ -8,19 +8,19 @@
 }
 
 .program-form__data {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   text-transform: uppercase;
   font-weight: normal;
   font-size: 16px;
   line-height: 18px;
-  color: @black-two;
+  color: @color-font--black;
   text-align: left;
 }
 
 .program-form__nb {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 14px;
   line-height: 16px;
   text-align: left;
-  color: @greylish-brown;
+  color: @color-font--arial;
 }
