--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,7 +1,7 @@
 .program__intro {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   text-align: left;
-  color:@black;
+  color:@color-font--main;
   line-height: 18px;
   font-size: 14px;
   text-transform: uppercase;
