--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,7 +5,7 @@
 
 .site-list__link {
   text-decoration: none;
-  font-family: @oswald;
+  font-family: @font-family--arial;
   font-weight: 500;
   color: @black;
   line-height: 20px;
