--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,9 @@
-@import "body.less";
+
+@import "variable.less";
+@import "fonts.less";
+@import "global.less";
 @import "button.less";
 @import "catalog.less";
-@import "variable.less";
 @import "header.less";
 @import "visually-hidden.less";
 @import "burger.less";
@@ -21,3 +23,4 @@
 @import "present.less";
 @import "program.less";
 @import "program-form.less";
+@import "button-show";
