--- a/source/less/blocks/add-article.less
+++ b/source/less/blocks/add-article.less
@@ -3,19 +3,19 @@
 }
 
 .add-article__title {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: normal;
   text-transform: uppercase;
-  color: @black-two;
+  color: @color-font--black;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
 }
 
 .add-article__item {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 14px;
   line-height: 14px;
   text-align: left;
-  color: @greylish-brown;
+  color: @color-font--arial;
 }
