--- a/source/less/blocks/add-goods.less
+++ b/source/less/blocks/add-goods.less
@@ -1,5 +1,5 @@
 .add-goods__title {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-size: 24px;
   text-align: left;
   line-height: 24px;
