--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,5 +1,5 @@
 .catalog__item {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   list-style-type: none;
   text-decoration: none;
 }
@@ -9,9 +9,9 @@
 }
 
 .catalog__head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: normal;
-  color: @black;
+  color: @color-font--main;
   font-size: 16px;
   line-height: 60px;
   text-align: left;
