--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -1,25 +1,25 @@
 .introduce__head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: 500;
   line-height: 36px;
   font-size: 36px;
-  color: @white;
+  color: @color-back--main;
   text-align: center;
 }
 
 .introduce {
   position: relative;
-  background-color: @leaf;
+  background-color: @color-button;
   background-image: url(../img/index-background-mobile@1x.jpg);
 
 }
 
 .introduce__info {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: 500;
   line-height: 14px;
   font-size: 14px;
-  color: @white;
+  color: @color-back--main;
   text-align: center;
 
 }
