--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,5 +1,5 @@
 .main__head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   font-weight: normal;
   font-size: 36px;
   text-align: left;
