--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -1,13 +1,14 @@
 .more-info__part {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 14px;
   text-align: left;
   line-height: 20px;
-  color: @greylish-brown;
+  color: @color-font--arial
+
 }
 
 .more-info__head {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   text-transform: uppercase;
   font-size: 20px;
   text-align: center;
