--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -3,7 +3,7 @@
 }
 
 .welcome__partnership {
-  font-family: @oswald;
+  font-family: @font-family--oswald;
   text-transform: uppercase;
   font-size: 20px;
   text-align: left;
@@ -11,7 +11,7 @@
 }
 
 .welcome__adress {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 14px;
   text-align: left;
   line-height: 20px;
