--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,8 +1,15 @@
-@leaf:#68b738;
-@white:#ffffff;
-@grey:#f2f2f2;
-@black:#111111;
-@oswald: "Oswald", "Arial", sans-serif;
-@greylish-brown: #444444;
-@arial: "Arial", sans-serif;
-@black-two: #222222;
+@color-button:#68b738;
+
+@color-back--main:#ffffff;
+
+@color-back--text:#f2f2f2;
+
+@color-font--main:#111111;
+
+@color-font--black: #222222;
+
+@color-font--arial: #444444;
+
+@font-family--arial: "Arial", sans-serif;
+
+@font-family--oswald: "Oswald", "Arial", sans-serif;
