Работа над ошибками-2

--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -5,7 +5,7 @@
 
 .program-choice__get {
   text-decoration: none;
-  color:@black;
+  color: @color-font--main;
   line-height: 15px;
   font-size: 16px;
   text-transform: uppercase;
@@ -26,10 +26,10 @@
 }
 
 .program-choice__info {
-  font-family: @arial;
+  font-family: @font-family--arial;
   font-size: 14px;
   line-height: 18px;
   text-align: left;
-  color: @greylish-brown;
+  color: @color-font--arial;
 
 }
