--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,9 +5,9 @@
 
 .site-list__link {
   text-decoration: none;
-  font-family: @font-family--arial;
+  font-family: @font-family--oswald;
   font-weight: 500;
-  color: @black;
+  color: @color-font--main;
   line-height: 20px;
   font-size: 20px;
 
