--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -15,3 +15,11 @@
   line-height: 20px;
   font-weight: normal;
 }
+
+.more-info__show {
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 20px;
+  color: @color-font--arial;
+  text-align: center;
+}
