--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: "Oswald";
-  src: url("../fonts/oswaldregular.woff");
-  src: url("../fonts/oswaldregular.woff2");
+  font-family: 'Oswald';
+  src: url("../fonts/oswaldregular.woff") format("woff");
+  src: url("../fonts/oswaldregular.woff2") format("woff2");
 
 }
 
 @font-face {
-  font-family: "Oswald-Medium";
-  src: url("../fonts/oswaldmedium.woff");
-  src: url("../fonts/oswaldmedium.woff2");
+  font-family: 'Oswald-Medium';
+  src: url("../fonts/oswaldmedium.woff") format("woff");
+  src: url("../fonts/oswaldmedium.woff2") format("woff2");
 }
