--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,25 +2,25 @@
 @import "variable.less";
 @import "fonts.less";
 @import "global.less";
-@import "button.less";
-@import "catalog.less";
-@import "header.less";
-@import "visually-hidden.less";
-@import "burger.less";
-@import "site-list.less";
-@import "program-choice.less";
-@import "introduce.less";
-@import "works.less";
-@import "example.less";
-@import "welcome.less";
-@import "smm-list.less";
-@import "htmlacademy.less";
-@import "add-article.less";
-@import "main.less";
-@import "catalog-description.less";
-@import "more-info.less";
-@import "add-goods.less";
-@import "present.less";
-@import "program.less";
-@import "program-form.less";
-@import "button-show";
+@import "blocks/button.less";
+@import "blocks/catalog.less";
+@import "blocks/header.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/burger.less";
+@import "blocks/site-list.less";
+@import "blocks/program-choice.less";
+@import "blocks/introduce.less";
+@import "blocks/works.less";
+@import "blocks/example.less";
+@import "blocks/welcome.less";
+@import "blocks/smm-list.less";
+@import "blocks/html-academy.less";
+@import "blocks/add-article.less";
+@import "blocks/main.less";
+@import "blocks/catalog-description.less";
+@import "blocks/more-info.less";
+@import "blocks/add-goods.less";
+@import "blocks/present.less";
+@import "blocks/program.less";
+@import "blocks/program-form.less";
+
