Работа над ошибками 3

--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -10,7 +10,7 @@
   line-height: 20px;
 }
 
-.welcome__adress {
+.welcome__address {
   font-family: @font-family--arial;
   font-size: 14px;
   text-align: left;
