Делаем проверку линтерами

--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -10,8 +10,7 @@
 .introduce {
   position: relative;
   background-color: @color-button;
-  background-image: url(../img/index-background-mobile@1x.jpg);
-
+  background-image: url("../img/index-background-mobile@1x.jpg");
 }
 
 .introduce__info {
@@ -21,5 +20,4 @@
   font-size: 14px;
   color: @color-back--main;
   text-align: center;
-
 }
