--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -3,8 +3,7 @@
   font-size: 14px;
   text-align: left;
   line-height: 20px;
-  color: @color-font--arial
-
+  color: @color-font--arial;
 }
 
 .more-info__head {
