--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -2,7 +2,7 @@
   width: 280px;
   height: 289px;
   background-color: @color-button;
-  background-image: url(../img/gift-photo-mobile@1x.jpg);
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   text-align: center;
 }
 
