--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,5 +1,8 @@
 body {
-  max-width: 320px;
+  min-width: 320px;
   font-family: @font-family--oswald;
+  font-weight: normal;
+  font-style: normal;
+  line-height: normal;
   color: @color-font--main;
 }
