--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Oswald";
-  src: url ("../fonts/oswaldregular.woff2") format ("woff2"), url ("../fonts/oswaldregular.woff") format ("woff");
+  src: url("../fonts/oswaldregular.woff2"), url("../fonts/oswaldregular.woff");
 }
