Редактируем файл fonts

--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -11,6 +11,7 @@
   position: relative;
   background-color: @color-button;
   background-image: url("../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
 
 .introduce__info {
