Начинаем верстать адаптивные сетки

--- a/source/less/blocks/burger.less
+++ b/source/less/blocks/burger.less
@@ -1,4 +1,15 @@
 .burger {
   background: transparent;
-  border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .burger {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .burger {
+    display: none;
+  }
 }
