--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,3 +13,12 @@
   background-color: @color-button;
   padding-top: 10px;
 }
+
+@media (min-width: @tablet-width) {
+  .button {
+    width: 245px;
+    height: 52px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
