--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,3 +21,5 @@
 @import "blocks/present.less";
 @import "blocks/program.less";
 @import "blocks/program-form.less";
+@import "blocks/header.less";
+@import "blocks/footer.less";
