--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,15 +1,10 @@
 @color-button:#68b738;
-
 @color-back--main:#ffffff;
-
 @color-back--text:#f2f2f2;
-
 @color-font--main:#111111;
-
 @color-font--black: #222222;
-
 @color-font--arial: #444444;
-
 @font-family--arial: "Arial", sans-serif;
-
 @font-family--oswald: "Oswald", "Arial", sans-serif;
+@tablet-width: 768px;
+@desktop-width: 1200px;
