--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,3 +1,8 @@
+.catalog {
+  display: flex;
+  flex-direction: column;
+}
+
 .catalog__item {
   font-family: @font-family--oswald;
   list-style-type: none;
@@ -20,4 +25,15 @@
 .catalog__item-img {
   width: 140px;
   height: 144px;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .catalog__item {
+    background-color: @color-back--text;
+  }
 }
