--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -1,4 +1,5 @@
 .introduce__head {
+  width: 245px;
   font-family: @font-family--oswald;
   font-weight: 500;
   line-height: 36px;
@@ -8,10 +9,13 @@
 }
 
 .introduce {
+  display: flex;
+  flex-direction: column;
   position: relative;
-  background-color: @color-button;
   background-image: url("../img/index-background-mobile@1x.jpg");
+  background-color: @color-button;
   background-repeat: no-repeat;
+  background-size: 320px 305px;
 }
 
 .introduce__info {
@@ -21,4 +25,54 @@
   font-size: 14px;
   color: @color-back--main;
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .introduce__head {
+    width: 450px;
+    font-family: @font-family--oswald;
+    font-weight: normal;
+    line-height: 60px;
+    font-size: 60px;
+    color: @color-font--main;
+    text-align: left;
+  }
+
+  .introduce {
+    background: none;
+  }
+
+  .introduce__info {
+    font-weight: normal;
+    line-height: 20px;
+    font-size: 20px;
+    color: @color-font--main;
+    text-align: left;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .introduce__head {
+    font-family: @font-family--oswald;
+    font-weight: normal;
+    line-height: 60px;
+    font-size: 60px;
+    color: @color-font--main;
+    text-align: left;
+  }
+
+  .introduce {
+    background-image: url("../img/index-background-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: 720px 696px;
+    background-position-x: right;
+  }
+
+  .introduce__info {
+    font-weight: normal;
+    line-height: 20px;
+    font-size: 20px;
+    color: @color-font--main;
+    text-align: left;
+  }
 }
