--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "../css/normalize.css";
 @import "variable.less";
 @import "fonts.less";
 @import "global.less";
@@ -23,3 +24,4 @@
 @import "blocks/program-form.less";
 @import "blocks/header.less";
 @import "blocks/footer.less";
+@import "blocks/container.less";
