--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "../css/normalize.css";
+@import "normalize.less";
 @import "variable.less";
 @import "fonts.less";
 @import "global.less";
@@ -24,4 +24,3 @@
 @import "blocks/program-form.less";
 @import "blocks/header.less";
 @import "blocks/footer.less";
-@import "blocks/container.less";
