--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,11 +1,22 @@
-.footer__info {
+.footer__container {
+  background-color: @color-back--text;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
-  .footer__info {
+  .footer__container {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    max-width: 710px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer__container {
+    max-width: 1220px;
   }
 }
