--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 100%;
-  margin: auto;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
 .header__logo {
@@ -17,10 +17,8 @@
 @media (min-width: @tablet-width) {
   .header__container {
     flex-direction: row;
-  }
-
-  .header__logo {
-    margin-left: 0;
+    max-width: 710px;
+    justify-content: space-between;
   }
 
   .header__menu {
@@ -30,6 +28,7 @@
 
 @media (min-width: @desktop-width) {
   .header__container {
+    max-width: 1220px;
     position: relative;
     background: none;
     z-index: 2;
