--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -5,3 +5,21 @@
   text-align: left;
   line-height: 60px;
 }
+
+.main__container {
+  max-width: 280px;
+  margin: 0 auto;
+}
+
+
+@media (min-width: @tablet-width) {
+  .main__container {
+    max-width: 710px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main__container {
+    max-width: 1220px;
+  }
+}
