--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,8 @@
-.footer__container {
+.footer__info {
   background-color: @color-back--text;
+}
+
+.footer__container {
   display: flex;
   flex-direction: column;
   align-items: center;
