--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -70,8 +70,12 @@
     z-index: 0;
   }
 
+  .introduce {
+    width: 50%;
+  }
+
   .introduce__container {
-    max-width: 415px;
-    margin: 0;
+    width: 415px;
+    margin: 0 auto;
   }
 }
