--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -5,12 +5,12 @@
   text-align: left;
   line-height: 60px;
 }
-
+/*
 .main__container {
   max-width: 280px;
   margin: 0 auto;
 }
-
+*/
 
 @media (min-width: @tablet-width) {
   .main__container {
