--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -1,9 +1,13 @@
 .program-choice {
   display: flex;
   flex-direction: column;
+
+  padding: 0;
+}
+
+.program-choice__wrapper {
   max-width: 280px;
   margin: 0 auto;
-  padding: 0;
 }
 
 .program-choice__get {
@@ -36,7 +40,7 @@
 }
 
 @media (min-width: @tablet-width) {
-  .program-choice {
+  .program-choice__wrapper {
     max-width: 710px;
   }
 }
@@ -45,9 +49,15 @@
   .program-choice {
     flex-direction: row;
     max-width: 1220px;
+    margin: 0 auto;
   }
 
   .program-choice__item {
+    background-color: none;
     max-width: 570px;
+  }
+
+  .program-choice__wrapper {
+    background-color: @color-back--text;
   }
 }
