--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,9 @@
 @import "blocks/program-form.less";
 @import "blocks/header.less";
 @import "blocks/footer.less";
+@import "blocks/goods-wrapper.less";
+@import "blocks/cat-data.less";
+@import "blocks/owner-data.less";
+@import "blocks/cat-info.less";
+@import "blocks/cat-addition.less";
+@import "blocks/catalog-wrapper.less";
