--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,6 +1,6 @@
 @color-button:#68b738;
 @color-back--main:#ffffff;
-@color-back--text:#f2f2f2;
+@color-back--text:#a5cc86; /*Временно вместо #f2f2f2 */
 @color-font--main:#111111;
 @color-font--black: #222222;
 @color-font--arial: #444444;
