--- a/source/less/blocks/add-article.less
+++ b/source/less/blocks/add-article.less
@@ -1,5 +1,7 @@
 .add-article {
   list-style: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .add-article__title {
@@ -18,4 +20,11 @@
   line-height: 14px;
   text-align: left;
   color: @color-font--arial;
+}
+
+@media (min-width: @tablet-width) {
+  .add-article {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
