--- a/source/less/blocks/add-goods.less
+++ b/source/less/blocks/add-goods.less
@@ -5,3 +5,20 @@
   line-height: 24px;
   font-weight: normal;
 }
+
+.add-goods {
+  width: 280px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .add-goods {
+    width: 710px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .add-goods {
+    margin: 0;
+  }
+}
