--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,3 +1,9 @@
+.program {
+  max-width: 280px;
+  margin: 0 auto;
+}
+
+
 .program__intro {
   font-family: @font-family--oswald;
   text-align: left;
@@ -5,4 +11,16 @@
   line-height: 18px;
   font-size: 14px;
   text-transform: uppercase;
+}
+
+@media (min-width: @tablet-width) {
+  .program {
+    max-width: 710px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program {
+    max-width: 1220px;
+  }
 }
