--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,3 +1,9 @@
+.welcome {
+  max-width: 280px;
+  margin: 0 auto;
+  display: flex;
+}
+
 .welcome__partnership {
   font-family: @font-family--oswald;
   text-transform: uppercase;
@@ -11,4 +17,16 @@
   font-size: 14px;
   text-align: left;
   line-height: 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .welcome {
+    max-width: 710px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .welcome {
+    width: 570px;
+  }
 }
