Работа над ошибками.

--- a/source/less/blocks/add-goods.less
+++ b/source/less/blocks/add-goods.less
@@ -1,14 +1,12 @@
-.add-goods__title {
-  font-family: @font-family--oswald;
-  font-size: 24px;
-  text-align: left;
-  line-height: 24px;
-  font-weight: normal;
+.add-goods__list {
+  margin: 0;
+  padding: 0;
 }
 
 .add-goods {
   width: 280px;
   margin: 0 auto;
+  padding: 0;
 }
 
 @media (min-width: @tablet-width) {
