--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,6 +12,7 @@
   color: @color-back--main;
   background-color: @color-button;
   padding-top: 10px;
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
