--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,12 +1,15 @@
 .catalog {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .catalog__item {
   font-family: @font-family--oswald;
   list-style-type: none;
   text-decoration: none;
+  margin: 0;
 }
 
 .catalog__item a {
