--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,16 +1,16 @@
-.catalog-wrapper {
+.container {
   max-width: 280px;
   margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
-  .catalog-wrapper {
+  .container {
     max-width: 710px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .catalog-wrapper {
+  .container {
     max-width: 1220px;
   }
 }
