--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -3,8 +3,6 @@
 }
 
 .example__wrapper {
-  max-width: 280px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
@@ -64,14 +62,17 @@
 }
 
 @media (min-width: @tablet-width) {
-  .example__wrapper {
-    max-width: 710px;
+  .example {
+    background-image: linear-gradient(to bottom, @color-back--main, @color-back--main 60%, @color-back--text 40%, @color-back--text);
   }
 }
 
 @media (min-width: @desktop-width) {
+  .example {
+    background-image: linear-gradient(to bottom, @color-back--main, @color-back--main 50%, @color-back--text 50%, @color-back--text);
+  }
+
   .example__wrapper {
-    max-width: 1220px;
     flex-direction: row;
   }
 }
