--- a/source/less/blocks/goods-wrapper.less
+++ b/source/less/blocks/goods-wrapper.less
@@ -1,7 +1,9 @@
+
 @media (min-width: @desktop-width) {
   .goods-wrapper {
     display: flex;
     max-width: 1220px;
     margin: 0 auto;
+    padding: 0;
   }
 }
