--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -1,8 +1,3 @@
-.program-form {
-  max-width: 280px;
-  margin: 0 auto;
-}
-
 .program-form__head {
   font-family: @font-family--oswald;
   font-weight: normal;
@@ -19,6 +14,9 @@
   line-height: 18px;
   color: @color-font--black;
   text-align: left;
+  width: 280px;
+  height: 150px;
+  margin: 0 auto;
 }
 
 .program-form__nb {
@@ -35,14 +33,15 @@
 }
 
 @media (min-width: @tablet-width) {
-  .program-form {
-    max-width: 710px;
+  .program-form__data {
+    width: 631px;
+    height: 174px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .program-form {
-    max-width: 1220px;
+  .program-form__data {
+    width: 1220px;
   }
 
   .program-form__wrapper {
