--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,6 +1,10 @@
 .present {
+  width: 280px;
+  height: 289px;
   background-color: @color-button;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -13,8 +17,19 @@
   margin: auto;
 }
 
+
+@media (min-width: @tablet-width) {
+  .present {
+    width: 708px;
+    height: 200px;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+  }
+}
+
 @media (min-width: @desktop-width) {
   .present {
-    max-width: 245px;
+    width: 245px;
+    height: 289px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
