--- a/source/less/style.less
+++ b/source/less/style.less
@@ -29,4 +29,4 @@
 @import "blocks/owner-data.less";
 @import "blocks/cat-info.less";
 @import "blocks/cat-addition.less";
-@import "blocks/catalog-wrapper.less";
+@import "blocks/container.less";
