--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -4,4 +4,13 @@
   font-size: 16px;
   line-height: 16px;
   text-align: left;
+  margin: auto;
+  margin-top: 31px;
+  margin-bottom: 31px;
+  padding: 0;
+}
+
+.html-academy__p {
+  margin: 0;
+  padding: 0;
 }
