--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,12 +2,16 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .site-list__item {
   list-style-type: none;
   text-align: center;
+  border-top: 1px solid @color-border;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .site-list__link {
@@ -19,9 +23,25 @@
   font-size: 20px;
 }
 
+
+.site-list__link:not([href]) {
+  border-bottom: 1px solid @color-button;
+}
+
+.site-list__link[href] {
+  &:hover {
+    color: @color-font--hvr;
+  }
+
+  &:active {
+    color: @color-font--act;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .site-list {
     flex-direction: row;
+    justify-content: flex-end;
   }
 
   .site-list__link {
@@ -31,6 +51,15 @@
     font-size: 18px;
     text-align: left;
   }
+
+  .site-list__item {
+    border: none;
+  }
+
+  .site-list__item:nth-child(2) {
+    margin-left: 36px;
+    margin-right: 36px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -38,5 +67,19 @@
     color: @color-back--main;
     line-height: 25px;
     font-size: 20px;
+  }
+
+  .site-list__link--index:not([href]) {
+    border-bottom: 1px solid @color-back--main;
+  }
+
+  .site-list__link--index[href] {
+    &:hover {
+      color: @color-back--hvr;
+    }
+
+    &:active {
+      color: @color-back--opasity;
+    }
   }
 }
