--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,3 +30,4 @@
 @import "blocks/cat-info.less";
 @import "blocks/cat-addition.less";
 @import "blocks/container.less";
+@import "blocks/back.less";
