--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,13 +13,19 @@
   background-color: @color-button;
   padding-top: 10px;
   margin: 0;
+
+  &:hover {
+    background-color: @color-button--hvr;
+  }
+
+  &:active {
+    color: @color-back--opasity;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .button {
     width: 245px;
-    height: 52px;
-    font-size: 20px;
     line-height: 20px;
   }
 }
