--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -6,10 +6,16 @@
 }
 
 .catalog__item {
+  position: relative;
   font-family: @font-family--oswald;
   list-style-type: none;
   text-decoration: none;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border-top: 1px solid @color-border;
+  padding-bottom: 25px;
 }
 
 .catalog__item a {
@@ -21,13 +27,22 @@
   font-weight: normal;
   color: @color-font--main;
   font-size: 16px;
-  line-height: 60px;
+  line-height: 20px;
   text-align: left;
+  width: 74px;
+  margin-right: 50px;
 }
 
 .catalog__item-img {
+  position: absolute;
+  left: 0;
   width: 140px;
   height: 144px;
+  background: none;
+}
+
+.catalog__button {
+  margin-top: 23px;
 }
 
 @media (min-width: @tablet-width) {
@@ -37,7 +52,44 @@
   }
 
   .catalog__item {
-    background-color: @color-back--text;
-    max-width: 324px;
+    display: block;
+    background-color: @color-back--catalog;
+    width: 324px;
+    margin: auto;
+    border: none;
+    margin-bottom: 140px;
+  }
+
+  .catalog__item:first-child {
+    margin-top: 150px;
+  }
+
+  .catalog__item-img {
+    position: relative;
+    left: 60px;
+    top: -50px;
+  }
+
+  .catalog__head {
+    margin: 0 auto;
+  }
+
+  .catalog__button {
+    margin-left: 38px;
+    width: 249px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog__item {
+    width: 245px;
+  }
+
+  .catalog__button {
+    width: 169px;
   }
 }
