--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,11 +1,29 @@
 .footer__info {
   background-color: @color-back--text;
+  padding: 0;
+}
+
+.footer__image {
+  margin: auto;
+  margin-top: 39px;
+  margin-bottom: 31px;
 }
 
 .footer__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.footer__go {
+  margin: auto;
+
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:active {
+    opacity: 60%;
+  }
 }
 
 @media (min-width: @tablet-width) {
