--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -16,6 +16,7 @@
 }
 
 .more-info__show {
+  margin: auto;
   text-decoration: none;
   font-size: 16px;
   line-height: 20px;
@@ -27,9 +28,36 @@
   .more-info {
     display: flex;
     flex-direction: column;
+    height: 400px; /*временно*/
   }
 
   .more-info__show {
+    width: 249px;
+    padding-top: 13px;
+    padding-bottom: 13px;
     background-color: @color-back--text;
+    font-size: 16px;
+    line-height: 20px;
+    margin: auto;
+  }
+
+  .more-info__head {
+    margin: 0 auto;
+    margin-top: 50px;
+    width: 135px;
+  }
+
+  .more-info__part {
+    width: 165px;
+    margin: auto;
+    margin-top: 28px;
+    margin-bottom: 85px;
+    text-align: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .more-info__show {
+    width: 169px;
   }
 }
