--- a/source/less/blocks/smm-list.less
+++ b/source/less/blocks/smm-list.less
@@ -1,7 +1,23 @@
 .smm-list {
   display: flex;
+  justify-content: center;
+  border-top: 1px solid @color-border;
+  border-bottom: 1px solid @color-border;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .smm-list__item {
   list-style: none;
+}
+
+.smm-list__item:nth-child(2) {
+  margin-left: 37px;
+  margin-right: 37px;
+}
+
+@media (min-width: @tablet-width) {
+  .smm-list {
+    border: none;
+  }
 }
